<resources>
    <string name="app_name">ProjectMain</string>
    <string name="navigation_drawer_open">open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>
    <string name="unit_unknown"></string>
    <string name="unit_kg">Kg</string>
    <string name="unit_g">g</string>
    <string name="shift">shift</string>
    <string name="shift1">1</string>
    <string name="shift2">2</string>
    <string name="shift3">3</string>
    <string name="location">Location</string>
    <string name="GDC01A">GDC-01-A</string>
    <string name="GDC01B">GDC-01-B</string>
    <string name="GDC01C">GDC-01-C</string>
    <string name="GDC02A">GDC-02-A</string>
    <string name="GDC02B">GDC-02-B</string>
    <string name="GDC02C">GDC-02-C</string>
    <string name="GDC03A">GDC-03-A</string>
    <string name="GDC03B">GDC-03-B</string>
    <string name="GDC03C">GDC-03-C</string>
    <string name="GDC04A">GDC-04-A</string>
    <string name="GDC04B">GDC-04-B</string>
    <string name="GDC04C">GDC-04-C</string>
    <string name="GDC05A">GDC-05-A</string>
    <string name="GDC05B">GDC-05-B</string>
    <string name="GDC05C">GDC-05-C</string>
    <string name="insert_some_value">insert some value</string>
    <string name="have_an_account">Have an account ?</string>
    <string name="image">image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="have_an_account_yet">Have an account yet ?</string>
    <string name="tanggal">tanggal</string>
    <string name="date">date</string>
    <string name="send">We will send OTP code to this Mobile Phone Number</string>
    <string name="_62">+62-</string>
    <string name="_81356810153">81356810153</string>
    <string name="otp_">OTP Verification</string>
    <string name="enter_">Enter the OTP Code</string>
    <string name="did_nt">Did\'nt Receive Otp Code!</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="get_otp">GET OTP CODE</string>
    <string name="search">Search Data</string>
    <string name="full_name">Full Name</string>
    <string name="tambah">Tambah</string>
    <string name="ambil">Ambil</string>
    <string name="please_scan_barcode">Please Scan Barcode</string>
    <string name="scan">scan</string>
    <string name="qty">Qty</string>
    <string name="mm">MM</string>
    <string name="item">Item</string>
    <string name="user">user</string>
    <string name="uom">uom</string>
    <string name="welcome">Welcome !</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="scan_some_qr_code">Scan Some QR Code</string>
    <string name="ok">OK</string>
    <string name="login">Login</string>
    <string name="detail_material_masuk">Detail Material Masuk</string>
    <string name="warna">warna</string>
    <string name="detail_material_keluar">Detail Material Terpakai</string>
    <string name="send_otp">Send Otp</string>
    <string name="id">id</string>
    <string name="no_doc">No Doc</string>
    <string name="id_stock">Id Stock</string>
    <string name="material">Material</string>
    <string name="quantity">Quantity</string>
    <string name="no_docs">Number Document</string>
    <string name="nik">Nik</string>
    <string name="mat_d">Material Document</string>
    <string name="bin">bin</string>
    <string name="good_receipt_date">Good Receipt Date</string>
    <string name="consume">Consume</string>
    <string name="migo">Migo</string>
    <string name="generate">Generate</string>
    <string name="scans">scan_qr_code</string>
    <string name="cancel">cancel</string>
    <string name="register_akun">Register Akun</string>
    <string name="transaksi_material">Transaksi Material</string>


</resources>
