<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/light_Background"
	android:orientation="vertical"
	android:padding="2dp"
	tools:context=".activity.detail.DetailTransactionIn">

	<TextView
		android:id="@+id/captions"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:fontFamily="sans-serif-condensed"
		android:gravity="center"
		android:text="@string/detail_material_keluar"
		android:textColor="@color/text_color"
		android:textSize="28sp" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="50dp"
		android:background="@drawable/border"
		android:orientation="vertical"
		android:padding="2dp">

		<LinearLayout
			android:layout_width="400dp"
			android:layout_height="50dp"
			android:layout_marginStart="10dp"
			android:orientation="horizontal">

			<ImageView
				android:id="@+id/img_date_detail_in"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:contentDescription="@string/image"
				android:src="@drawable/ic_date" />

			<EditText
				android:id="@+id/et_detail_date_in"
				android:layout_width="300dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="10dp"
				android:autofillHints=""
				android:hint="@string/date"
				android:inputType="date"
				android:textColor="@color/text_color"
				android:textSize="20sp" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="400dp"
			android:layout_height="50dp"
			android:layout_marginStart="10dp"
			android:layout_marginTop="5dp"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:fontFamily="sans-serif-condensed"
				android:text="@string/shift"
				android:textSize="14sp" />

			<TextView
				android:id="@+id/tv_detail_shift_in"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginStart="10dp"
				android:fontFamily="sans-serif-condensed"
				android:hint="@string/shift"
				android:textSize="14sp" />

			<TextView
				android:id="@+id/tv_detail_nik_in"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginStart="10dp"
				android:fontFamily="sans-serif-condensed"
				android:hint="@string/nik"
				android:textSize="14sp" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="400dp"
			android:layout_height="50dp"
			android:layout_marginStart="10dp"
			android:layout_marginTop="5dp"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:fontFamily="sans-serif-condensed"
				android:text="@string/mat_d"
				android:textSize="14sp" />

			<TextView
				android:id="@+id/tv_detail_no_doc"
				android:layout_width="211dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginStart="10dp"
				android:fontFamily="sans-serif-condensed"
				android:text="@string/no_doc"
				android:textSize="14sp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="400dp"
			android:layout_height="50dp"
			android:layout_marginStart="10dp"
			android:layout_marginTop="5dp"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:fontFamily="sans-serif-condensed"
				android:text="@string/id_stock"
				android:textSize="14sp" />

			<TextView
				android:id="@+id/tv_detail_id_stock_in"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginStart="10dp"
				android:fontFamily="sans-serif-condensed"
				android:text="@string/id_stock"
				android:textSize="14sp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="400dp"
			android:layout_height="50dp"
			android:layout_marginStart="10dp"
			android:layout_marginTop="5dp"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:fontFamily="sans-serif-condensed"
				android:text="@string/item"
				android:textSize="14sp" />

			<TextView
				android:id="@+id/tv_detail_material_in"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginStart="10dp"
				android:fontFamily="sans-serif-condensed"
				android:text="@string/material"
				android:textSize="14sp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="400dp"
			android:layout_height="50dp"
			android:layout_marginStart="10dp"
			android:layout_marginTop="5dp"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginStart="10dp"
				android:fontFamily="sans-serif-condensed"
				android:text="@string/qty"
				android:textSize="14sp" />

			<TextView
				android:id="@+id/tv_detail_quantity_in"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginStart="10dp"
				android:fontFamily="sans-serif-condensed"
				android:hint="@string/quantity"
				android:textSize="20sp" />

			<TextView
				android:id="@+id/tv_detail_uom_in"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center|bottom"
				android:layout_marginStart="5dp"
				android:fontFamily="sans-serif-condensed"
				android:text="@string/uom"
				android:textSize="12sp"
				tools:ignore="SmallSp" />
		</LinearLayout>


	</LinearLayout>

</LinearLayout>
