<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_layout"
    android:layout_width="match_parent"
	android:padding="2dp"
	android:background="@drawable/border"
    android:layout_height="wrap_content">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
			android:background="@drawable/border"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="3dp"
                android:text="@string/id"
                android:textSize="14sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_mm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="3dp"
				android:fontFamily="sans-serif-condensed"
				android:textSize="14sp"
                android:text="@string/mm" />

            <TextView
                android:id="@+id/tv_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/item"
                android:textSize="14sp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

				<TextView
					android:id="@+id/tv_available_stock"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="10dp"
					android:layout_marginTop="5dp"
					android:fontFamily="sans-serif-condensed"
					android:text="@string/qty"
					android:textSize="25sp" />

                <TextView
                    android:id="@+id/tv_uom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/uom"
                    android:textColor="@color/text_color"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_bin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/bin"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_gr_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/good_receipt_date"
                android:textSize="14sp" />


        </LinearLayout>


</LinearLayout>
