<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/ll_layout_out"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:padding="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
			android:padding="7dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mat_doc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/mm"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="35sp"
                android:textStyle="bold|italic"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_idStock_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/id_stock"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_item_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/material"
                android:textColor="@color/color2"
                android:textSize="14sp"
                android:layout_marginStart="15dp"
                android:fontFamily="sans-serif"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_qty_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qty"
                    android:layout_marginStart="15dp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/color2"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_uom_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/uom"
                    android:fontFamily="sans-serif-condensed-light"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="10sp"
					tools:ignore="SmallSp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_date_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/color2"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                android:layout_marginStart="15dp" />

            <TextView
                android:id="@+id/tv_shift_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:textStyle="bold|italic"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_nik_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
				android:text="@string/nik"
				android:fontFamily="sans-serif"
				android:textColor="@color/color3"
                android:textSize="14sp"/>

        </LinearLayout>

</LinearLayout>
