<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_layoutin"
    android:layout_width="match_parent"
    android:padding="2dp"
    android:background="@drawable/border"
    android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
			android:padding="7dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_no_doc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/no_doc"
                android:textColor="@color/color2"
                android:textSize="25sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_id_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/id_stock"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_material"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="sans-serif"
                android:text="@string/material"
                android:textColor="@color/color2"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
				android:background="#ffff"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_qty_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/qty"
                    android:textColor="@color/color2"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_uom_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/uom"
                    android:textColor="@color/color2"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_date_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="sans-serif"
                android:text="@string/date"
                android:textColor="@color/color2"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_shift_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:textStyle="bold|italic"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_nik_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
				android:fontFamily="sans-serif"
				android:textColor="@color/color3"
                android:text="@string/verify"
                android:textSize="14sp" />

        </LinearLayout>
</LinearLayout>
