<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_Background"
    android:orientation="vertical"
    tools:context=".activity.ScanActivity">


	<com.budiyev.android.codescanner.CodeScannerView
		android:id="@+id/scanner"
		android:layout_width="wrap_content"
		android:layout_height="675dp"
		app:frameAspectRatioHeight="1.45"
		app:frameAspectRatioWidth="1"
		app:frameColor="@color/light_Background"
		app:frameCornersRadius="0dp"
		app:frameCornersSize="5dp"
		app:frameSize="0.95"
		app:frameThickness="2dp" />


	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/txt_id_stock"
			android:layout_width="143dp"
			android:layout_height="50dp"
			android:gravity="center"
			android:layout_marginTop="8dp"
			android:fontFamily="sans-serif"
			android:text="@string/scan"
			android:textAlignment="center"
			android:background="@drawable/border"
			android:textSize="20sp"
			android:textStyle="normal" />

		<Button
			android:id="@+id/btn_ok"
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:gravity="center"
			android:layout_marginTop="8dp"
			android:layout_marginStart="10dp"
			android:fontFamily="sans-serif"
			android:text="@string/ok"
			android:textColor="#fff"
			android:background="@drawable/button"
			android:textSize="20sp" />

		<Button
			android:id="@+id/btn_cancel"
			android:layout_width="145dp"
			android:layout_height="50dp"
			android:gravity="center"
			android:layout_marginStart="10dp"
			android:fontFamily="sans-serif"
			android:layout_marginTop="8dp"
			android:text="@string/cancel"
			android:background="@drawable/border"
			android:textColor="#FA07E2"
			android:textSize="20sp" />

	</LinearLayout>


</LinearLayout>
